--- a/ex005.html
+++ b/ex005.html
@@ -17,7 +17,7 @@
     <h1>Iniciando estudos com DOM</h1>
     <p>Aqui vai o resultado</p>
     <p>Aprendendo a usar o <strong>Dom</strong> em JavaScript</p>
-    <div name="msg" > Clique em mim</div>
+    <div id="msg" > Clique em mim</div>
     <script>
         var corpo = window.document.body
         var p1 = window.document.getElementsByTagName('p')[0]
@@ -26,7 +26,8 @@
         d.style.background = 'green'
         d.innerText = 'Olá!'
         */
-        var d = w
+        var d = window.document.querySelector('div#msg')
+        d.style.background = 'blue'
     </script>
 
 </body>
