--- a/Aula010/ex006.html
+++ b/Aula010/ex006.html
@@ -21,5 +21,24 @@
     <div id="area">
         Interaja...
     </div>
+    <script>
+        var a = window.document.getElementById('area')
+        a.addEventListener('click', clicar)
+        a.addEventListener('mouseenter', entrar)
+        a.addEventListener('mouseout', sair)
+
+        function clicar() {
+            a.innerText = 'Clicou!'
+            a.style.backgroundColor = 'red'
+        }
+        function entrar() {
+            a.innerText = 'Entrou!'
+        }
+        function sair() {
+            a.innerText = 'Saiu!'
+            a.style.backgroundColor = 'green'
+        }
+
+    </script>
 </body>
 </html>
