--- a/aula12ex/ex015/modelo.html
+++ b/aula12ex/ex015/modelo.html
@@ -17,13 +17,13 @@
                 <input type="number" name="txtano" id="txtano" min="0">
             </p>
             <p>Sexo:
-                <input type="radio" name="radsex" id="mas">
-                <label for="masc" checked>Masculino</label>
+                <input type="radio" name="radsex" id="mas" checked>
+                <label for="mas">Masculino</label>
                 <input type="radio" name="radsex" id="fem">
-                <label for="fem" checked>Feminino</label>
+                <label for="fem">Feminino</label>
             </p>
             <p>
-                <input type="button" value="Verificar" onclick="checked">
+                <input type="button" value="Verificar" onclick="verificar()">
             </p>
         </div>
         <div id="res">
