--- a/aula14ex/ex016/index.html
+++ b/aula14ex/ex016/index.html
@@ -13,13 +13,13 @@
     </header>
     <section>
         <div>
-            Início: <input type="number" name="Início" id="Início"> <br>
-            Fim: <input type="number" name="Fim" id="Fim"> <br>
-            Passo: <input type="number" name="Passo" id="Passo"> <br>
-            <input type="button" value="Contar" onclick="Contar()">
+            <p>Início: <input type="number" name="início" id="txti"></p>
+            <p>Fim: <input type="number" name="fim" id="txtf"></p>
+            <p>Passo: <input type="number" name="passo" id="txtp"></p>
+            <p><input type="button" value="Contar" onclick="contar()"></p>
         </div>
         <div id="res">
-            <p>Preparando a contagem</p>
+            Preparando a contagem...
         </div>
     </section>
     <footer>
