--- a/aula14ex/ex016/index.html
+++ b/aula14ex/ex016/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de exercício</title>
+    <title>Super Contador</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,11 +12,11 @@
         <h1>Vamos contar</h1>
     </header>
     <section>
-        <div>
+        <div id="dados">
             <p>Início: <input type="number" name="início" id="txti"></p>
             <p>Fim: <input type="number" name="fim" id="txtf"></p>
             <p>Passo: <input type="number" name="passo" id="txtp"></p>
-            <p><input type="button" value="Contar" onclick="contar()"></p>
+            <p><input type="button" value="contar" onclick="contar()"></p>
         </div>
         <div id="res">
             Preparando a contagem...
