--- a/aula14ex/ex017/index.html
+++ b/aula14ex/ex017/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de exercício</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-
+            <p>Número: <input type="number" name="num" id="txtn"></p>
+            <input type="button" value="Gerar Tabuada" onclick="gerar()">
         </div>
-        <div>
-
+        <div id="tab">
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima</option>
+            </select>
         </div>
     </section>
     <footer>
